- Add braces to statements - Some simplification