@@ -1,80 +1,67 @@
 package com.baeldung.algorithms.bynumber;
 
 
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
+import java.util.stream.Stream;
+
+import static com.baeldung.algorithms.bynumber.NaturalOrderComparators.comparingByNumbersInString;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class NaturalOrderComparatorsUnitTest {
 
     @Test
     void givenSimpleStringsContainingIntsAndDoubles_whenSortedByRegex_checkSortingCorrect() {
+        List<String> testStrings = Stream.of("a1", "b3", "c4", "d2.2", "d2.4", "d2.3d")
+                .sorted(comparingByNumbersInString)
+                .toList();
 
-        List<String> testStrings = Arrays.asList("a1", "b3", "c4", "d2.2", "d2.4", "d2.3d");
-
-        testStrings.sort(NaturalOrderComparators.createNaturalOrderRegexComparator());
-
-        List<String> expected = Arrays.asList("a1", "d2.2", "d2.3d", "d2.4", "b3", "c4");
-
-        assertEquals(expected, testStrings);
+        assertEquals(List.of("a1", "d2.2", "d2.3d", "d2.4", "b3", "c4"), testStrings);
 
 
     }
 
     @Test
     void givenSimpleStringsContainingIntsAndDoublesWithAnInvalidNumber_whenSortedByRegex_checkSortingCorrect() {
+        List<String> testStrings = Stream.of("a1", "b3", "c4", "d2.2", "d2.4", "d2.3.3d")
+                .sorted(comparingByNumbersInString)
+                .toList();
 
-        List<String> testStrings = Arrays.asList("a1", "b3", "c4", "d2.2", "d2.4", "d2.3.3d");
-
-        testStrings.sort(NaturalOrderComparators.createNaturalOrderRegexComparator());
-
-        List<String> expected = Arrays.asList("d2.3.3d", "a1", "d2.2", "d2.4", "b3", "c4");
-
-        assertEquals(expected, testStrings);
+        assertEquals(List.of("d2.3.3d", "a1", "d2.2", "d2.4", "b3", "c4"), testStrings);
 
 
     }
 
     @Test
     void givenAllForseenProblems_whenSortedByRegex_checkSortingCorrect() {
+        List<String> testStrings = Stream.of("a1", "b3", "c4", "d2.2", "d2.f4", "d2.3.3d")
+                .sorted(comparingByNumbersInString)
+                .toList();
 
-        List<String> testStrings = Arrays.asList("a1", "b3", "c4", "d2.2", "d2.f4", "d2.3.3d");
-
-        testStrings.sort(NaturalOrderComparators.createNaturalOrderRegexComparator());
-
-        List<String> expected = Arrays.asList("d2.3.3d", "a1", "d2.2", "d2.f4", "b3", "c4");
-
-        assertEquals(expected, testStrings);
+        assertEquals(List.of("d2.3.3d", "a1", "d2.2", "d2.f4", "b3", "c4"), testStrings);
 
 
     }
 
     @Test
     void givenComplexStringsContainingSeparatedNumbers_whenSortedByRegex_checkNumbersCondensedAndSorted() {
+        List<String> testStrings = Stream.of("a1b2c5", "b3ght3.2", "something65.thensomething5") //125, 33.2, 65.5
+                .sorted(comparingByNumbersInString)
+                .toList();
 
-        List<String> testStrings = Arrays.asList("a1b2c5", "b3ght3.2", "something65.thensomething5"); //125, 33.2, 65.5
-
-        List<String> expected = Arrays.asList("b3ght3.2", "something65.thensomething5", "a1b2c5" );
-
-        testStrings.sort(NaturalOrderComparators.createNaturalOrderRegexComparator());
-
-        assertEquals(expected, testStrings);
+        assertEquals(List.of("b3ght3.2", "something65.thensomething5", "a1b2c5"), testStrings);
 
     }
 
     @Test
     void givenStringsNotContainingNumbers_whenSortedByRegex_checkOrderNotChanged() {
+        final var input = List.of("c", "a", "d", "e");
 
-        List<String> testStrings = Arrays.asList("a", "c", "d", "e");
-        List<String> expected = new ArrayList<>(testStrings);
+        List<String> testStrings = input.stream()
+                .sorted(comparingByNumbersInString)
+                .toList();
 
-        testStrings.sort(NaturalOrderComparators.createNaturalOrderRegexComparator());
-
-        assertEquals(expected, testStrings);
+        assertEquals(input, testStrings);
     }
 }
